clang/test/BSC/Negative/Ownership/RuleCheck/generic/generic.cbs
// %RUN: %clang_cc1 -verify %s

T* _Owned malloc_owned<T>(T value);
void free_owned<T>(T * _Owned p);
void free_owned_new(void * _Owned p);

typedef struct A {
	int * _Owned a;
} A;

A * _Owned source(int x) {
	int * _Owned i = malloc_owned<int>(2);
	A b = { .a = i };
	A * _Owned p = malloc_owned<A>(b);
	return p;
}

void sink(A * _Owned p) {
	free_owned(p);
}

void new_sink(A * _Owned p) {
	free_owned_new((void * _Owned)p); // expected-error {{invalid cast to `void * _Owned` of not all moved value: `p`, p.a is _Owned}}
}

int main(int argc, char* argv[]) {
	A * _Owned a = source(2);
	if (argc == 1)	{
		return 0; // expected-error {{memory leak of value: `a`}} expected-error {{field memory leak of value: `a`, a.a is leak}}
	}
	sink(a);
	return 0;
}
